# college_c

./: .gitignore  README.md  karah.py  pyproject.toml
.github/workflows/: deploy.yml
01/: add.c  add_mat.c  fact.c  fib.c  info_input.c  mul_name.c  pattern1.c  pattern2.c  rev.c  simple_interest.c  str_inpt.c  trans_mat.c
02/: file.c  str.c
03/: AddMatrix.c  ArrayAdress.c  ColumnAddress.c  MulMatrix.c  RevArray.c  RowAdress.c  SparseMatrix.c
04/: AddLink.c  AddPoly.c  CircularDoubleLink.c  CircularLink.c  DoubleLink.c  Link.c
05/: Binary.c  InfixPostfix.c  Paren.c  RevStrStack.c
06/: fib_series.c  fibn.c  hanoi.c  hcf.c
07/: avl_check.c  bst_insert.c  bst_search.c  tree.c
template/: home.html.j2  prog.html.j2  ques.html.j2
